Fix voice stuff not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,19 @@
 body {
     margin: 0px 0px 0px 0px;
 }
-span, p {
+span, p, h1, h2, h3, h4, h5 {
     padding: 2px 2px 2px 2px;
+    color: black;
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 12px;
 }
 h1 {
     text-align: center;
+}
+.main {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 .flag {
     margin-left: 6px;
@@ -19,13 +27,6 @@ h1 {
     font-weight: bold;
 }
 .listStart {
-    border-bottom-width: 1px;
-    border-left-width: 0px;
-    border-top-width: 0px;
-    border-right-width: 0px;
-    border-color: black;
-    border-style: solid;
-    padding-bottom: 2px;
     margin-bottom: 16px;
 }
 .backgroundDiv {
@@ -38,13 +39,11 @@ h1 {
 }
 .background {
     height: 100%;
-    z-index: -1;
     opacity: 1;
 }
 .soumah {
     position: absolute;
     height: 100%;
-    z-index: -1;
     opacity: 1;
 }
 .expand {
